--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,14 @@
 {
     "functions": {
       "api/index.py": {
-        "runtime": "python3.9"
+        "runtime": "vercel-python@0.5.1"
       }
     },
     "routes": [
-      { "src": "/(.*)", "dest": "api/index.py" }
+      {
+        "src": "/(.*)",
+        "dest": "api/index.py"
+      }
     ]
   }
   
